Read Transactional Details (#42)
* framework

* parse cas

* runs pipeline with JDK 17

* parse scripts

* get portfolio

* fetch portfolio details

* load Nav using cron job

* adds missing changes

* adds a column

* set alias names in scheme table