@@ -1,44 +1,54 @@
 package com.example.mfscreener.service.impl;
 
-import com.example.mfscreener.entities.MFScheme;
-import com.example.mfscreener.entities.MFSchemeNav;
-import com.example.mfscreener.entities.MFSchemeType;
+import com.example.mfscreener.entities.*;
 import com.example.mfscreener.exception.NavNotFoundException;
 import com.example.mfscreener.exception.SchemeNotFoundException;
-import com.example.mfscreener.model.FundDetailDTO;
-import com.example.mfscreener.model.Meta;
-import com.example.mfscreener.model.NAVData;
-import com.example.mfscreener.model.NavResponse;
-import com.example.mfscreener.model.Scheme;
+import com.example.mfscreener.model.*;
+import com.example.mfscreener.repository.ErrorMessageRepository;
 import com.example.mfscreener.repository.MFSchemeRepository;
 import com.example.mfscreener.repository.MFSchemeTypeRepository;
+import com.example.mfscreener.repository.TransactionRecordRepository;
 import com.example.mfscreener.service.NavService;
 import com.example.mfscreener.util.Constants;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.poi.hssf.usermodel.HSSFSheet;
+import org.apache.poi.hssf.usermodel.HSSFWorkbook;
+import org.apache.poi.ss.usermodel.Cell;
+import org.apache.poi.ss.usermodel.CellType;
+import org.apache.poi.ss.usermodel.Row;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
 import org.springframework.util.Assert;
+import org.springframework.util.StopWatch;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
 import java.net.URI;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.TemporalAdjusters;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 @RequiredArgsConstructor
 public class NavServiceImpl implements NavService {
 
   private final MFSchemeRepository mfSchemesRepository;
   private final MFSchemeTypeRepository mfSchemeTypeRepository;
   private final RestTemplate restTemplate;
+  private final TransactionRecordRepository transactionRecordRepository;
+  private final ErrorMessageRepository errorMessageRepository;
 
   Function<NAVData, MFSchemeNav> navDataToMFSchemeNavFunction =
       navData -> {
@@ -110,7 +120,7 @@ public class NavServiceImpl implements NavService {
         navList.stream()
             .map(navDataToMFSchemeNavFunction)
             .filter(nav -> !mfScheme.getMfSchemeNavies().contains(nav))
-            .collect(Collectors.toList());
+            .toList();
 
     if (!newNavs.isEmpty()) {
       for (MFSchemeNav newSchemeNav : newNavs) {
@@ -162,5 +172,117 @@ public class NavServiceImpl implements NavService {
     scheme.setDate(String.valueOf(mfScheme.getMfSchemeNavies().get(0).getNavDate()));
     scheme.setNav(String.valueOf(mfScheme.getMfSchemeNavies().get(0).getNav()));
     return scheme;
+  }
+
+  @Override
+  public String upload() throws IOException {
+    File file = new File("C:\\Users\\rajakolli\\Desktop\\my-transactions.xls");
+
+    List<TransactionRecord> transactionRecordList = new ArrayList<>();
+    try (FileInputStream fileInputStream = new FileInputStream(file)) {
+      // Create Workbook instance holding reference to .xlsx file
+      HSSFWorkbook workbook = new HSSFWorkbook(fileInputStream);
+
+      // Get first/desired sheet from the workbook
+      HSSFSheet sheet = workbook.getSheetAt(0);
+
+      // Iterate through each rows one by one
+      for (int i = 1; i <= sheet.getLastRowNum(); i++) {
+
+        Row row = sheet.getRow(i);
+
+        TransactionRecord transactionRecord = new TransactionRecord();
+
+        transactionRecord.setTransactionDate(
+            LocalDate.from(row.getCell(0).getLocalDateTimeCellValue()));
+        transactionRecord.setSchemeName(row.getCell(1).getStringCellValue());
+        transactionRecord.setFolioNumber(getFolioNumber(row.getCell(2)));
+        transactionRecord.setTransactionType(row.getCell(3).getStringCellValue());
+        transactionRecord.setPrice(getPrice(row.getCell(4)));
+        transactionRecord.setUnits(getUnits(row.getCell(5)));
+        transactionRecord.setBalanceUnits(getUnits(row.getCell(6)));
+        transactionRecordList.add(transactionRecord);
+      }
+    }
+
+    transactionRecordRepository.saveAll(transactionRecordList);
+
+    return "Completed Processing";
+  }
+
+  @Override
+  public PortfolioDTO getPortfolio() {
+    List<PortfolioDetails> portfolioDetailsList = transactionRecordRepository.getPortfolio();
+    List<PortfolioDetailsDTO> portfolioDetailsDTOS = new ArrayList<>();
+    portfolioDetailsList.forEach(
+        portfolioDetails -> {
+          PortfolioDetailsDTO portfolioDetailsDTO = new PortfolioDetailsDTO();
+          if (portfolioDetails.getSchemeId() != null) {
+            Scheme scheme =
+                getNavByDate(portfolioDetails.getSchemeId(), getAdjustedDate(LocalDate.now()));
+            portfolioDetailsDTO.setTotalValue(
+                portfolioDetails.getBalanceUnits() * Float.parseFloat(scheme.getNav()));
+          }
+          portfolioDetailsDTO.setFolioNumber(portfolioDetails.getFolioNumber());
+          portfolioDetailsDTO.setSchemeName(portfolioDetails.getSchemaName());
+          portfolioDetailsDTOS.add(portfolioDetailsDTO);
+        });
+    return new PortfolioDTO(
+        portfolioDetailsDTOS.stream()
+            .map(PortfolioDetailsDTO::getTotalValue)
+            .filter(Objects::nonNull)
+            .reduce(0f, Float::sum),
+        portfolioDetailsDTOS);
+  }
+
+  @Override
+  public int updateSynonym(Long schemeId, String schemaName) {
+    return transactionRecordRepository.updateSchemeId(schemeId, schemaName);
+  }
+
+  @Override
+  public void loadFundDetailsIfNotSet() {
+    StopWatch stopWatch = new StopWatch();
+    stopWatch.start("loadDetails");
+    List<Long> distinctSchemeIds = transactionRecordRepository.findDistinctSchemeId();
+
+    for (Long schemeId : distinctSchemeIds) {
+      {
+        try {
+          fetchSchemeDetails(schemeId);
+        } catch (SchemeNotFoundException | NavNotFoundException exception) {
+          log.error(exception.getMessage());
+          ErrorMessage errorMessage = new ErrorMessage();
+          errorMessage.setMessage(exception.getMessage());
+          errorMessageRepository.save(errorMessage);
+        }
+      }
+    }
+    stopWatch.stop();
+    log.info("Fund House and Scheme Type Set in : {} sec", stopWatch.getTotalTimeSeconds());
+  }
+
+  private Float getPrice(Cell cell) {
+    if (cell.getCellType().equals(CellType.STRING)) {
+      return Float.valueOf(cell.getStringCellValue());
+    } else {
+      return (float) cell.getNumericCellValue();
+    }
+  }
+
+  private Float getUnits(Cell cell) {
+    if (cell.getCellType().equals(CellType.STRING)) {
+      return 0.0f;
+    } else {
+      return (float) cell.getNumericCellValue();
+    }
+  }
+
+  private String getFolioNumber(Cell cell) {
+    if (cell.getCellType().equals(CellType.NUMERIC)) {
+      return String.valueOf(cell.getNumericCellValue());
+    } else {
+      return cell.getStringCellValue();
+    }
   }
 }
